--- a/We6jboisFreeSL/pom.xml
+++ b/We6jboisFreeSL/pom.xml
@@ -20,6 +20,11 @@
         <version>4.10</version>
         <scope>test</scope>
     </dependency>
+    <dependency>
+	<groupId>pircbot</groupId>
+	<artifactId>pircbot</artifactId>
+	<version>1.5.0</version>
+    </dependency>        
 </dependencies>
 <build>
     <plugins>
@@ -32,6 +37,23 @@
                 <target>1.6</target>
             </configuration>
         </plugin>
+             <plugin>
+                 <groupId>org.apache.maven.plugins</groupId>
+                 <artifactId>maven-assembly-plugin</artifactId>
+             <executions>
+               <execution>
+                 <phase>package</phase>
+                 <goals>
+                   <goal>attached</goal>
+                 </goals>
+             <configuration>
+               <<descriptorRefs>
+                 <descriptorRef>jar-with-dependencies</descriptorRef>
+               </descriptorRefs>
+             </configuration>
+               </execution>
+             </executions>
+             </plugin>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-antrun-plugin</artifactId>
