Updated to add settings file to target. Signed-off-by:we6jbo <we6jbo@gmail.com>

--- a/We6jboisFreeSL/pom.xml
+++ b/We6jboisFreeSL/pom.xml
@@ -72,7 +72,8 @@
                         <copy file="resources/We6jboisFreeSL.ini" tofile="${basedir}/target/We6jboisFreeSL.ini"/>
                         <echo>Copying instructions.txt to target directory</echo>
                         <copy file="resources/instructions.txt" tofile="${basedir}/target/instructions.txt"/>
-
+                        <echo>Copying We6jboisFreeSL.settings to target directory</echo>
+                        <copy file="resources/We6jboisFreeSL.settings" tofile="${basedir}/target/We6jboisFreeSL.settings"/>
                     </tasks>
                 </configuration>
                 </execution>
